Adjust to use web console in dev

--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -237,7 +237,7 @@
       border-radius: 100%;
       position: absolute;
       left: 0;
-      background-color: #c6e5ff;
+      background-color: #f3f3f3;
       background-size: 106% 106%;
       background-position: center;
       //transition: transform 2s ease;
