--- a/web/app/views/layouts/classifier/_kinds.html.erb
+++ b/web/app/views/layouts/classifier/_kinds.html.erb
@@ -1,6 +1,6 @@
 <div data-controller='kinds' data-kinds-identifier="<%= event.id %>">
 	<span data-target="kinds.dialogButton" data-action="click->kinds#openDialog">
-		<%= event.kinds.blank? ? 'EDITAR' : event.kinds.map{|kind| kind['name']}.join(' ')  %>
+		<%= event.kinds_name.blank? ? 'EDITAR' : event.kinds_name.join(' ')  %>
 	</span>
 	<div data-target="kinds.dialog" class="mdc-dialog" role="alertdialog" aria-modal="true"
 		aria-labelledby="my-dialog-title" aria-describedby="my-dialog-content">
@@ -13,7 +13,7 @@
 							class="me-chip-set mdc-chip-set mdc-chip-set--filter mdc-chip-set--input">
 							<% Artifact.kinds_whitelist.sort.each do |kind| %>
 								<div data-target="chip.chip" data-action="click->chip#select"
-									class="me-chip mdc-chip <%= event.kinds.pluck("details ->> 'name'").include?(kind) ? 'mdc-chip--selected' : nil %>"
+									class="me-chip mdc-chip <%= event.kinds_name.include?(kind) ? 'mdc-chip--selected' : nil %>"
 									data-turbolinks-scroll="false">
 									<div class="mdc-chip__checkmark">
 										<svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
