--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -52,9 +52,9 @@
   </div>
 <% end %>
 
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
+<script rel="preconnect" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
+<script rel="preconnect" src="https://apis.google.com/js/platform.js" defer></script>
 <%= javascript_include_tag 'welcome/application.js', defer: true %>
-<script src="https://apis.google.com/js/platform.js" defer></script>
 
 
 
