--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Alegreme - Eventos e atividades em Porto Alegre</title>
-  <!-- <meta name="turbolinks-cache-control" content="no-preview"> -->
+
   <meta name="theme-color" content="#5ecf80"/>
   <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <%= render partial: 'layouts/meta-tags' %>
+
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
   <link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-192x192.png' %>">
+
   <%= favicon_link_tag asset_path 'favicon-32x32.png', sizes: "32x32" %>
   <%= favicon_link_tag asset_path 'favicon-16x16.png', sizes: "16x16" %>
 
