--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -2,19 +2,27 @@
 <html lang="pt-BR">
 <head>
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-                                                    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-WH7RVCR');</script>
+  <script>(function (w, d, s, l, i) {
+	  w[l] = w[l] || [];
+	  w[l].push({
+		  'gtm.start'                    :
+			  new Date().getTime(), event: 'gtm.js'
+	  });
+	  var f                          = d.getElementsByTagName(s)[0],
+	      j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+	  j.async = true;
+	  j.src =
+		  'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+	  f.parentNode.insertBefore(j, f);
+  })(window, document, 'script', 'dataLayer', 'GTM-WH7RVCR');</script>
   <!-- End Google Tag Manager -->
 
   <title>Alegreme - Aproveite a cidade de Porto Alegre</title>
 
-  <meta name="Description" content="Atividades de rua, meetups profissionais, os rolês que só avisam no dia, aquele filme no Mario Quintana... Um feed para as pessoas que gostam de explorar coisas novas e de não perder o que já conhecem.">
-  <!-- <meta name="theme-color" content="#5ecf80"/> -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=5.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <%= render partial: 'layouts/meta-tags' %>
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
@@ -33,8 +41,10 @@
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WH7RVCR"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WH7RVCR"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <%= yield %>
@@ -55,7 +65,6 @@
 <script rel="preconnect" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
 <script rel="preconnect" src="https://apis.google.com/js/platform.js" defer></script>
 <%= javascript_include_tag 'welcome/application.js', defer: true %>
-
 
 
 </body>
