--- a/web/app/views/layouts/_meta-tags.html.erb
+++ b/web/app/views/layouts/_meta-tags.html.erb
@@ -3,11 +3,13 @@
 <meta name="description" content="Atividades culturais, meetups, shows, rolês, feiras de rua, aquele filme no Mario Quintana... Um feed para quem quer explorar a cidade e não perder o que já conhece">
 
 <!-- Open Graph / Facebook -->
+<meta property="fb:app_id" content="2687173967974142"/>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.alegreme.com/">
 <meta property="og:title" content="Alegreme - Aproveite a cidade de Porto Alegre">
 <meta property="og:description" content="Atividades culturais, meetups, shows, rolês, feiras de rua, aquele filme no Mario Quintana... Um feed para quem quer explorar a cidade e não perder o que já conhece">
 <meta property="og:image" content="<%= image_url 'welcome/social-banner.jpg' %>">
+<meta property="og:locale" content="pt_BR">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
