--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -65,7 +65,7 @@
     <% end %>
     <div class="android">
       <div class="android__screen">
-        <video autoplay="autoplay" loop="true" muted="true">
+        <video loop="true" muted="true">
           <source src="<%= asset_url 'welcome/demo-android-min.webm' %>" type="video/webm">
           <source src="<%= asset_url 'welcome/demo-android-min.mp4' %>" type="video/mp4">
         </video>
@@ -91,6 +91,10 @@
         <i title="Versão de testes do aplicativo ainda em desenvolvimento e validações">beta</i> vamos liberar até 100 convites por semana
       </div>
     </div>
+    <button class="shareBtn shareBtn--invite mdc-fab mdc-fab--extended" aria-label="Compartilhar" style="">
+      <i class="mdc-fab__icon material-icons"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/></svg></i>
+      <span class="mdc-fab__label">Compartilhar</span>
+    </button>
     <div class="invite__cta" title="Seja um Beta tester!">
       Pegar Convite
       <span>
@@ -100,7 +104,6 @@
     <div class="invite__google-details">
       <%= responsive_image_tag "welcome/google-details", alt: 'conta do google', class: 'lazyload' %>
     </div>
-    <div class="sharethis-inline-share-buttons invite__share"></div>
     <div class="skatista lazyload" data-bg="<%= image_path 'welcome/skatista.png' %>" style="transform: translate(-1900px, -50px);">
     </div>
   </section>
@@ -183,6 +186,10 @@
         <%= responsive_image_tag "welcome/footer-logo-icon", alt: 'logo', title: 'Pimba!', class: 'lazyload' %>
         <div class="brand__pimba js-pimba" style="opacity: 0;">Pimba</div>
       </div>
+      <button class="shareBtn mdc-fab mdc-fab--extended" aria-label="Compartilhar" style="">
+        <i class="mdc-fab__icon material-icons"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/></svg></i>
+        <span class="mdc-fab__label">Compartilhar</span>
+      </button>
       <div class="footer__links">
         <a href="/privacy">Política de privacidade</a>
         <a href="/terms">Termos de serviço</a>
@@ -190,5 +197,4 @@
       <%= responsive_image_tag 'welcome/footer-message', alt: 'footer message', title: 'Tchau!', class: 'lazyload' %>
     </section>
   </section>
-
 </div>
