--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -16,7 +16,7 @@
     background-repeat: no-repeat;
     background-position: top center;
     max-width: 100vw;
-    overflow-x: hidden;
+    //overflow-x: hidden;
   }
 }
 
