--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -73,6 +73,7 @@
     </div>
      <div class="demo__plataform-numbers">
        <b><%= @events_count %></b> eventos e atividades de <b><%= @organizers_count %></b> organizadores estão disponíveis hoje
+       <br>
     </div>
   </section>
 
@@ -190,6 +191,10 @@
         <i class="mdc-fab__icon material-icons"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/></svg></i>
         <span class="mdc-fab__label">Compartilhar</span>
       </button>
+      <div class="social__links">
+        <a href="https://www.instagram.com/portoalegreme" >Instagram</a> ·
+        <a href="https://twitter.com/portoalegreme" >Twitter</a>
+      </div>
       <div class="footer__links">
         <a href="/privacy">Política de privacidade</a>
         <a href="/terms">Termos de serviço</a>
