--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -1,10 +1,38 @@
 <%= notice %>
-<%# if current_user && current_user.admin? %>
-  <!--
-    <a href="<%#= @event.url %>/edit">Editar</a>
-    <a href="/train">Treinar</a>
- -->
-<%# end %>
+
+<% if current_user&.admin? %>
+  <a href="<%= @event.url %>/edit">Editar</a>
+  <a href="/train">Treinar</a>
+<% end %>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "<%= @event.details_name %>",
+  "startDate": "<%= @event.first_day_time.to_datetime.iso8601 %>",
+  "endDate": "",
+  "location": {
+    "@type": "Place",
+    "name": "<%= @event.place_details_name %>",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "<%= @event.geographic['address'] %>",
+      "addressLocality": "<%= @event.geographic['city'] %>",
+      "postalCode": "<%= @event.geographic['cep'] %>",
+      "addressRegion": "RS",
+      "addressCountry": "BR"
+    }
+  },
+  "image": [
+    "<%= @event.image[:feed].url %>"
+   ],
+  "description": "<%= strip_tags @event.details_description %>"
+}
+
+
+</script>
+
 <div id="event" class="me-card me-card--single event-<%= @event.id %>"
      data-controller="event"
      data-target="event.event"
@@ -16,17 +44,17 @@
   <div class="me-card__head">
     <div class="me-card__media" style="<%= get_image_style_attr @event %>; background-image: url('<%= @event.image[:feed].url %>')">
       <% if current_user %>
-      <div class="me-card__like-button" data-action="click->event#like">
-        <div data-target="event.like">
-          <button data-target="event.likeButton" id="add-to-favorites"
-          class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_or_guest_user.taste_events_saved?(@event.id) %>"
-          aria-label="Add to favorites" aria-hidden="true" aria-pressed="false">
-          <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">star</i>
-          <i class="material-icons-sharp mdc-icon-button__icon">star_border</i>
-        </button>
-      </div>
-    </div>
-    <% end %>
+        <div class="me-card__like-button" data-action="click->event#like">
+          <div data-target="event.like">
+            <button data-target="event.likeButton" id="add-to-favorites"
+                    class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_or_guest_user.taste_events_saved?(@event.id) %>"
+                    aria-label="Add to favorites" aria-hidden="true" aria-pressed="false">
+              <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">star</i>
+              <i class="material-icons-sharp mdc-icon-button__icon">star_border</i>
+            </button>
+          </div>
+        </div>
+      <% end %>
     </div>
     <h2 class="me-card__name">
       <%= @event.details_name %>
@@ -34,15 +62,6 @@
   </div>
 
   <div class="me-card__content">
-    <!--    <h2 class="mdc-card__name mdc-typography--headline6">-->
-    <%#= @event.details_name %>
-    <!--    </h2>-->
-
-
-    <!--    <div class="me-card__ocurrence">-->
-    <!--      <b>Quando:</b> <%#= "#{@event.day_of_week['decorator']} (#{@event.day_of_week['string']})" %>-->
-    <!--    </div>-->
-    <!--    <div class="me-card__place">-->
     <div class="me-card__primary-section">
       <div class="me-card__place">
         <% if @event.place %>
@@ -78,7 +97,7 @@
 
     <div class="me-card__topics">
       <%#= render partial: 'components/follow/follow-chip-set', locals: { user: current_user, chips: @event.categories.sort, event_id: @event.id, type: 'categories' } %>
-      <%= render partial: 'components/follow/follow-chip-set', locals: { user: current_user, chips: @event.organizers.sort, event_id: @event.id, type: 'organizers' } %>
+      <%= render partial: 'components/follow/follow-chip-set', locals: {user: current_user, chips: @event.organizers.sort, event_id: @event.id, type: 'organizers'} %>
     </div>
 
 
