Add follow buttons in welcome page

--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -109,6 +109,18 @@
     </div>
   </section>
 
+  <section class="social">
+    <h2>Siga o alegreme</h2>
+    <div class="social__buttons">
+      <a href="https://www.instagram.com/portoalegreme">
+        <%= responsive_image_tag "welcome/follow-instagram", alt: 'siga o instagram', class: 'lazyload' %>
+      </a>
+      <a href="https://twitter.com/portoalegreme">
+        <%= responsive_image_tag "welcome/follow-twitter", alt: 'siga o twitter', class: 'lazyload' %>
+      </a>
+    </div>
+  </section>
+
   <section class="questions">
     <h2>Perguntas?</h2>
     <div class="questions__grid">
