--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -282,6 +282,7 @@
   }
 }
 
+
 .questions {
   width: 100%;
   height: 920px;
@@ -502,17 +503,66 @@
   }
 }
 
-.social__links {
-  margin: 15px 0;
-  color: $brand-color;
+.social {
+  margin: 125px 0 75px 0;
+  width: 100vw;
+  max-width: 1090px;
+
+  &__buttons {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    text-align: center;
+  }
 
   & a {
+    max-width: 85%;
+    margin: auto;
+    transition: transform 0.35s ease;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    &:hover {
+      transform: scale(0.95);
+    }
+  }
+
+  & img, picture {
+    max-width: 100%;
+    @include mobile-only{
+      margin: 6px auto;
+    }
+  }
+
+  & h2 {
+    font-family: $font-primary-family;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 58px;
+    margin: 0 auto 50px auto;
+    padding: 0;
+    text-align: center;
+    @include mobile-only {
+      font-size: 31px;
+      line-height: 0;
+      margin: 65px auto 0 auto;
+      height: 50px;
+    }
+  }
+
+
+  &__links {
+    margin: 15px 0;
     color: $brand-color;
-    font-weight: 600;
-    text-decoration: none;
-    padding: 0 3px;
+
+    & a {
+      color: $brand-color;
+      font-weight: 600;
+      text-decoration: none;
+      padding: 0 3px;
+    }
   }
 }
+
 
 .shareBtn {
   position: relative;
