Fix issue with kinds in collection creator

--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -19,10 +19,11 @@
   }
 
   &--small {
+    margin: 2px 0 2px 12px;
 
     & .mdc-chip {
       padding: 1px 8px;
-      background: $elevated-surface-color;
+      //background: $elevated-surface-color;
       height: unset;
 
       & .material-icons {
@@ -30,7 +31,7 @@
       }
 
       &--selected {
-        border: 1px solid $border-color;
+        //border: 1px solid $border-color;
       }
     }
 
