--- a/web/app/views/layouts/classifier/_classifier.html.erb
+++ b/web/app/views/layouts/classifier/_classifier.html.erb
@@ -2,6 +2,9 @@
 <p>
 	<%= "#{@items[:total_count]} eventos para treinamento" %>
 </p>
+<p>
+<a href="/train?desc=true">Classificação alta</a>
+</p>
 
 
 <tr style="font-weight: bold">
