--- a/web/app/views/layouts/classifier/_kinds.html.erb
+++ b/web/app/views/layouts/classifier/_kinds.html.erb
@@ -41,6 +41,6 @@
 				</footer>
 			</div>
 		</div>
-		<div class="mdc-dialog__scrim"></div>
+		<!-- <div class="mdc-dialog__scrim"></div> -->
 	</div>
 </div>
