--- a/web/app/views/layouts/classifier/_tags.html.erb
+++ b/web/app/views/layouts/classifier/_tags.html.erb
@@ -44,6 +44,6 @@
 				</footer>
 			</div>
 		</div>
-		<div class="mdc-dialog__scrim"></div>
+		<!-- <div class="mdc-dialog__scrim"></div> -->
 	</div>
 </div>
