--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Alegreme - Eventos e atividades em Porto Alegre</title>
+  <title><%= meta_title %></title>
 
   <meta name="theme-color" content="#5ecf80"/>
   <meta name="viewport"
