Adjust in welcome page

--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -31,6 +31,10 @@
       color: $font-secondary-color;
       margin: 0 auto;
     }
+
+    &.hidden {
+      display: none;
+    }
   }
 
   &__item {
