--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -204,8 +204,8 @@
         <span class="mdc-fab__label">Compartilhar</span>
       </button>
       <div class="social__links">
-        <a href="https://www.instagram.com/portoalegreme" >instagram</a> ·
-        <a href="https://twitter.com/portoalegreme" >twitter</a> ·
+<!--        <a href="https://www.instagram.com/portoalegreme" >instagram</a> ·-->
+<!--        <a href="https://twitter.com/portoalegreme" >twitter</a> ·-->
         <a href="#" >oi@alegreme.com</a>
       </div>
       <div class="footer__links">
