--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -354,11 +354,12 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
-    color: darken($brand-color, 10%);
+    color: darken($brand-color, 4%);
     cursor: pointer;
     width: 100%;
     height: 100%;
     transition: transform 0.4s ease;
+    background: #F9F9F9;
 
     h3 {
       font-family: $font-secondary-family;
@@ -379,27 +380,27 @@
 
     &--q1 {
       grid-area: q1;
-      background: #F2F2F2;
+      //background: #F2F2F2;
     }
 
     &--q2 {
       grid-area: q2;
-      background: #F2F2F2;
+      //background: #F2F2F2;
     }
 
     &--q3 {
       grid-area: q3;
-      background: #F2F2F2;
+      //background: #F2F2F2;
     }
 
     &--q4 {
       grid-area: q4;
-      background: #F2F2F2;
+      //background: #F2F2F2;
     }
 
     &--q5 {
       grid-area: q5;
-      background: #F2F2F2;
+      //background: #F2F2F2;
     }
   }
 }
